--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,6 @@ app-jwt-expiration-milliseconds=604800000
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
+logging.level.org.springframework.security=DEBUG
+
 
